samples/_failures_safe/1761184894_924628_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29f64482.c: In function ‘main’:
./samples/SAFE/__tmp_29f64482.c:174:20: error: missing terminating " character
  174 |             printf("
      |                    ^
./samples/SAFE/__tmp_29f64482.c:174:13: error: expected expression at end of input
  174 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_29f64482.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29f64482.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29f64482.c:174:13: error: expected declaration or statement at end of input
